# SimuGraph

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml  requirements.txt  top.csv
plugins/: example_plugin.py
simugraph/: camera.py  settings.py
simugraph/algorithms/: __init__.py  astar.py  base.py  bellman_ford.py  bfs.py  connectivity.py  dfs.py  dijkstra.py  eulerian.py  floyd_warshall.py  graph_coloring.py  kruskal.py  layout.py  loader.py  prim.py  scc.py  topological_sort.py
simugraph/commands/: history.py
simugraph/core/: edge.py  graph.py  node.py  properties.py
simugraph/generators/: __init__.py  barabasi_albert.py  bipartite.py  complete.py  cycle.py  grid.py  random_graph.py  tree.py
simugraph/io/: __init__.py  clipboard_io.py  dot_format.py  exporter.py  gexf.py  graphml.py  matrix.py  serializer.py
simugraph/ui/: canvas.py  context_menu.py  dialog.py  hud.py  inspector.py  minimap.py  overlay.py  properties_panel.py  sidebar.py  splash.py  toolbar.py
tests/: test_algorithms.py  test_camera.py  test_generators.py  test_graph.py  test_io.py  test_properties.py
