[build-system]
requires = ["setuptools>=61.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "simugraph"
version = "1.0.0"
description = "An interactive graph simulator with algorithms, visualization, generators, and import/export features."
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "SimuGraph Contributors"}
]
dependencies = [
    "pygame>=2.5.0",
    "pillow>=10.0.0"
]

[project.urls]
Homepage = "https://github.com/medeirosdev/SimuGraph"
